--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 /*  your css code here. If applicable */
 .image{
-	object-fit:contain;
+	object-fit:cover;
 /* 	margin-right:"10px"; */
-	padding-right:20px
+	padding-right:30px
 }
 
 .hero{
@@ -10,6 +10,15 @@
 }
 
 .button{
+	padding:10px;
 	background-color: red;
 	color:white;
+	text-decoration:none;
+	border-radius:5px;
+	text-align:center;
+	margin-left:50px;
+}
+
+p{
+	padding-bottom:5px;
 }
