--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 /*  your css code here. If applicable */
-.image{
-	object-fit:cover;
-/* 	margin-right:"10px"; */
-	padding-right:30px
+img{
+	object-fit: cover;
+	padding-right:30px;
+/* 	width:100% */
 }
 
 .hero{
